2005-08-31 Francois Proulx <francois.proulx@gmail.com>
	* Fixed new node creation bug
	
2005-08-29 Philippe April <philippe@ilesansfil.org>
	* js/gmaps_hotspots_status_map.js: Fixed small bug in that makes prevents
	IE to see the map properly.

2005-08-22 Pascal Leclerc  <pascal@plec.ca>
	* install.php, Change javascript to OnClick + dependencie note
	* schema_validate.php, Fix broken DB update for install.php
	* SmartyWifidog.php, Add automatic redirect to install.php if Smarty not installed

2005-08-22 Francois Proulx <francois.proulx@gmail.com>
	* Added edit button for quickly accessing Content editing mode
	* Changed the layout so the admin ui fits in a tighter space
	
2005-08-21 Francois Proulx <francois.proulx@gmail.com>
	* Added reference to new street address fields in mapping page and on status template
	* Fix bug on line 756 of RssPressReview , added check for empty var.
	* Flickr support is broken, added  bug to sf.net tracker
	
2005-08-21 Francois Proulx <francois.proulx@gmail.com>
	* Node admin UI should now be completed.
	* Minor bug fixes in Geocoder
	* Merged node_owners and node_tech_officers table into node_stakeholders
	
2005-08-19 Benoit Grégoire  <bock@step.polymtl.ca>
	* New schema version
	* install.php, tmp/magpie_cache/:  Move all magpie caches 
	to a central location, adjust install script to match.
	* classes/MainUI.php:  Add $_REQUEST array output if debug_request is set as a parameter to the page
	* classes/Network.php, classes/Node.php:  Change content ordering to be most recently subscribed first,
	 this is a stopgap measure while waiting for Content ordering to be explicitely settable. 
	* classes/Content/RssAggregator.php:  Full admin UI, some bug fixes
	* lib/RssPressReview/RssPressReview.php: New version, adds isFeedAvailable() and getFeedTitle() methods.
	  Fixes minor bugs

2005-08-17 Pascal Leclerc  <pascal@plec.ca>
        * Added install script + minor changes in schema_validate.php
